<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="language_code">en</string>
    <string name="app_name" translatable="false">CineVerse</string>
    <string name="app_slogan">Where Cinema Meets Your Pen!</string>

    <!-- Global -->
    <string name="retry" tools:ignore="PrivateResource">Retry</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="none">None</string>
    <string name="cancel">Cancel</string>
    <string name="public_">Public</string>
    <string name="delete_">Delete</string>
    <string name="change">Change</string>
    <string name="content">Contents</string>
    <string name="no_content_found">No such content was found</string>
    <string name="sort">Sort</string>
    <string name="confirm">Confirm</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>

    <!-- Time -->
    <string name="second_ago">second ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="day_ago">day ago</string>
    <string name="days_ago">days ago</string>
    <string name="week_ago">week ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="month_ago">week ago</string>
    <string name="months_ago">weeks ago</string>
    <string name="year_ago">week ago</string>
    <string name="years_ago">weeks ago</string>

    <!-- Error -->
    <string name="unexpected_error">Unexpected error has occurred</string>

    <!-- Login/Register -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="username_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="google_login">Continue with Google</string>
    <string name="signin">Sign In</string>
    <string name="signin_to_continue">Please Sign In to continue.</string>
    <string name="signup">Sign Up</string>
    <string name="create_an_account">Create an account to continue.</string>
    <string name="signout">Sign Out</string>

    <!-- Forgot Password -->
    <string name="forgot_password_question">Forgot password</string>
    <string name="forgot_password_question_u"><u>Forgot password?</u></string>
    <string name="enter_your_email_to_reset">No worries! Enter your email and we will send you a link to reset your password.</string>
    <string name="reset_password">Reset password</string>

    <!-- Auth Error -->
    <string name="user_not_found_disabled">User account does not exist or has been disabled.</string>
    <string name="username_already_exist">Already exists an account with the given username.</string>
    <string name="email_already_exist">Already exists an account with the given email address.</string>
    <string name="invalid_username_format">Invalid username format.</string>
    <string name="invalid_email_format">Invalid email format.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="wrong_password">Your password is incorrect, please try again.</string>
    <string name="weak_password">The password entered is too weak, please use at least 6 characters for added security.</string>
    <string name="invalid_credentials">Invalid credential.</string>

    <!-- Verify Email -->
    <string name="verify_email">Verify your Email</string>
    <string name="we_have_sent_email">We have sent a verification email to you on %s.</string>
    <string name="check_your_inbox">Check your email inbox, follow the instructions to complete the process, and then click verified button.</string>
    <string name="resend_email">Resend Email</string>
    <string name="verified">Verified</string>
    <string name="wait_second">Wait %s second</string>
    <string name="wait_seconds">Wait %s seconds</string>
    <string name="email_not_verified">Email not verified</string>

    <!-- Network Error -->
    <string name="ops" translatable="false">Ooops!</string>
    <string name="no_internet">Slow or no internet connection.</string>
    <string name="check_internet">Check your internet settings.</string>
    <string name="try_again">Try Again</string>

    <!-- Email -->
    <string name="email_sent">Email sent</string>
    <string name="email_not_sent_wait">Error, email not sent, wait few time</string>

    <!-- Google -->
    <string name="google_signin_failed">Google Sign In failed</string>
    <string name="authentication_failed">Authentication failed</string>

    <!-- Home -->
    <string name="review_or_track_content">Review or track the content you want to see</string>
    <string name="all">All</string>
    <string name="movies">Movies</string>
    <string name="tv_series">Tv Series</string>
    <string name="categories">Categories</string>
    <string name="your_reviews">Your reviews</string>
    <string name="your_watchlist">Your watchlist</string>

    <!-- Home Section -->
    <string name="popular_movie">Popular Movie</string>
    <string name="top_rated_movie">Globally Top Rated Movie</string>
    <string name="today_trending_movie">Trending Movies Today on TMDB</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="now_playing_movie">Now playing Movie</string>
    <string name="popular_tv">Popular Tv Series</string>
    <string name="top_rated_tv">Globally Top Rated Tv Series</string>
    <string name="today_trending_tv">Trending Tv Series Today on TMDB</string>
    <string name="airing_today_tv">Airing Today Tv Series</string>
    <string name="week_airing_tv">Airing This Week Tv Series</string>
    <string name="view_all">View all</string>
    <string name="genre">Genre</string>

    <!-- Search -->
    <string name="search_history">Search History</string>
    <string name="no_item_search_history">No items saved in your search history</string>
    <string name="microphone">Microphone</string>
    <string name="speak_to_text">Speak to text</string>
    <string name="keyword">Keyword</string>

    <!-- Account -->
    <string name="your_recent_to_watch">Your Recent to Watch</string>
    <string name="your_recent_reviews">Your Recent Reviews</string>

    <!-- Setting -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_subtitle">Welcome to CineVerse - Your Ultimate Movie Destination!</string>
    <string name="about_text">CineVerse is more than a mobile application, it\'s a passionate community of cinephiles. We share the same passion for the world of cinema and offer a welcoming place where film lovers can connect, express their opinions and discover new content to love.\nOn CineVerse, you can write detailed reviews of movies and TV shows, share your opinions, and find out what other members of our community think. Your personal watchlist allows you to keep track of all the films and TV series you want to watch, while social interactions allow you to like other users\' reviews, comment and participate in discussions about your passion for cinema.\n\nCreate your personalized account, reflect your unique love of cinema in your profile, and connect with friends who share your interests. CineVerse was born from the belief that cinema is a universal language that can connect people from all over the world. Our mission is to create a global community of cinephiles who can share their passion, discover new titles and deepen their understanding of the world of cinema.\n\nJoin us on CineVerse and be part of a community that loves cinema as much as you do. Explore, interact, share and discover the magical world of cinema with CineVerse!</string>
    <string name="account_settings_name">Account</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_language">Change Language</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="username_changed">Username changed</string>
    <string name="current_username">Current Username</string>
    <string name="enter_username">Enter your username</string>
    <string name="change_username">Change your username</string>
    <string name="username_updated">Username Updated</string>

    <!-- View All Account -->
    <string name="your_reviews2">Your Reviews</string>
    <string name="your_watchlist2">Your Watchlist</string>

    <!-- Content Details -->
    <string name="cast_crew">Cast &amp; Crew</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="n_minutes">%1$d minutes</string>
    <string name="n_season">%1$d season</string>
    <string name="recent_review">Recent Reviews</string>
    <string name="to_watch">To Watch</string>
    <string name="review">Review</string>
    <string name="videos">Videos</string>
    <string name="your_review">Your review</string>
    <string name="write_review">Write your review</string>
    <string name="give_your_rating">Give your rating</string>
    <string name="added_to_watch_list">Content added to your watchlist</string>
    <string name="removed_to_watch_list">Content removed to watch list</string>
    <string name="delete_review">Delete review</string>
    <string name="sure_delete_review">Are you sure you want to delete your review?</string>

    <!-- User content list -->
    <string name="recent_old">Newest</string>
    <string name="old_recent">Oldest</string>
    <string name="alphabetic_a_z">Alphabetic A-Z</string>
    <string name="alphabetic_z_a">Alphabetic Z-A</string>
    <string name="best_rating">Best rating</string>
    <string name="worst_rating">Worst rating</string>
    <string name="number_of_like">Number of like</string>
</resources>