<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        tools:context=".view.auth.fragment.ForgotPasswordFragment">

        <include
            android:id="@+id/progressIndicator"
            layout="@layout/linear_progress_indicator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_spacing"
                android:gravity="center"
                android:orientation="vertical">

                <include
                    layout="@layout/header_image_layout"
                    android:id="@+id/include2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:shapeDrawable="@{@drawable/random_shape2}"
                    app:imgDrawable="@{@drawable/forgot_password}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/double_spacing"
                    android:gravity="center"
                    android:text="@string/forgot_password_question"
                    android:textSize="@dimen/text_big"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:layout_marginBottom="@dimen/standard_spacing"
                    android:text="@string/enter_your_email_to_reset"
                    android:textSize="@dimen/text_normal" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/outline_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/resetPasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_56dp"
                    android:layout_marginTop="@dimen/standard_spacing"
                    android:enabled="false"
                    android:text="@string/reset_password" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>
